# work-at-olist

./: .flake8  .gitignore  .pyup.yml  .travis.yml  LICENSE  Pipfile  Procfile  README.md  docker-compose.yaml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: django.yml
api_books/: asgi.py  settings.py  urls.py  wsgi.py
api_books/core/: apps.py  links.py  models.py  views.py
api_books/core/management/commands/: import_csv.py
api_books/core/migrations/: 0001_initial.py  0002_alter_author_name.py  0003_alter_author_options_book.py  0004_alter_book_authors.py
api_books/core/tests/: conftest.py  test_author_models.py  test_book_api.py  test_book_models.py  test_list_author.py  test_management.py  test_models.py
contrib/: authors.csv  env-sample
library_project/: .env.example  authors.csv  manage.py
library_project/books_app/: apps.py  filters.py  models.py  serializers.py  views.py
library_project/books_app/management/commands/: populate_authors.py
library_project/books_app/migrations/: 0001_initial.py  0002_book.py
library_project/books_app/tests/: tests_author.py  tests_book.py
library_project/library_project/: asgi.py  settings.py  urls.py  wsgi.py
olist/: asgi.py  settings.py  test_home.py  urls.py  wsgi.py
olist_library/: config.py  manage.py
olist_library/olist_library/: asgi.py  settings.py  urls.py  wsgi.py
root/: asgi.py  settings.py  urls.py  wsgi.py
